<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/menu_item_shuffle"
        android:title="@string/menu_item_shuffle"/>      
    <item
        android:id="@+id/menu_item_rename"
        android:title="@string/menu_item_rename"/>  
    <item
        android:id="@+id/menu_item_face_up"
        android:title="@string/menu_item_face_up"/>   
    <item
        android:id="@+id/menu_item_face_down"
        android:title="@string/menu_item_face_down"/>
    <item
        android:id="@+id/menu_item_move_all"
        android:title="@string/menu_item_move_all"/>           
    <item 
        android:id="@+id/menu_item_protect_pile"
        android:title="@string/menu_item_protect_pile"/>
    <item 
        android:id="@+id/menu_item_unprotect_pile"
        android:title="@string/menu_item_unprotect_pile"/>
    <item 
        android:id="@+id/menu_item_deal_cards" 
        android:title="@string/menu_item_deal_cards"/>
    <item 
        android:id="@+id/menu_item_pile_move"
        android:title="@string/menu_item_pile_move"/>

</menu>
